syntax = "proto3";

package mock;

service Mock {
    rpc Base(BaseMsg) returns (EmptyMsg) {}
}

message BaseMsg {
    uint32 Uint32 = 1;
    uint64 Uint64 = 2;
    string String = 3;
    int32 Int32 = 4;
    int64 Int64 = 5;
    sint32 Sint32 = 6;
    sint64 Sint64 = 7;
}

message EmptyMsg {}
